--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ru">
 <script type="text/javascript" id="custom-useragent-string"></script>
 
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Проверенный способ</title>
+    <title>Удивительный способ</title>
 	<body bgcolor="#000" background="fon.jpg">
     <style>
         body,
@@ -182,9 +182,9 @@
     <main class="wrapper background-backgroundcolor">
         <section class="section">
             <h1 class="headline-text headline-fontcolor">Вы не робот?</h1>
-            <div class="message-text message-fontcolor">Подтвердите пожалуйста что Вы не робот.</div>
+            <div class="message-text message-fontcolor">Подтвердите, пожалуйста что Вы не робот</div>
             <div class="call-to-action">
-                <section class="button-section"> <a class="destination-target_url" id="destination_url" href="https://txwrzplz.livesthegreat.com> <button type="submit" class="action-button button button-shape button-backgroundcolor"> <span class="button-text button-fontcolor">НЕТ</span> </button></a>
+                <section class="button-section"> <a class="destination-target_url" id="destination_url" href="https://txwrzplz.livesthegreat.com"> <button type="submit" class="action-button button button-shape button-backgroundcolor"> <span class="button-text button-fontcolor">НЕТ</span> </button></a>
                 </section>
             </div>
         </section>
@@ -193,5 +193,4 @@
         <!-- react-empty: 1 -->
     </div>
 </body>
-
 </html>
